--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 
 <body>
-    <h2>Git & Github</h2>
+    <h1>Hello, Rana!</h1>
+    <h3>Welcome to Git & Github.</h3>
+    <h2>You're awesome.</h2>
+    <p>This is some text</p>
 </body>
 
 </html>
